# pty-mcp-server

./: .gitignore  CHANGELOG.md  DDD_RESTRUCTURE_SUMMARY.md  DISTRIBUTION_STRATEGY.md  ERROR_HANDLING_INVESTIGATION.md  FEATURE_IMPLEMENTATION_PLAN.md  FUTURE_ENHANCEMENTS.md  GITHUB_MANAGEMENT.md  LICENSE  PTY_INTEGRATION_PLAN.md  PTY_MCP_SDK_FIX_REPORT.md  PULL_REQUEST_ANALYSIS_REPORT.md  README.md  __main__.py  launch.sh  main.py  main_adapter.py  main_broken.py  main_fixed.py  main_minimal_backup.py  main_new.py  pyproject.toml  test_dynamic_env.py
core/: __init__.py  manager.py
docs/: README.md
docs/architecture/: README.md  dependency-injection.md
docs/architecture/adr/: 001-domain-driven-design.md  002-tmux-integration.md
docs/archive/: FOLDER_SCAN_ANALYSIS.md  PACKAGE_ARCHITECTURE_REPORT.md  PTY_UVX_TEST_REPORT.md  PTY_UVX_ZERO_TOOLS_FIX.md  REFACTORING_LOG.md  REFACTORING_SUCCESS_REPORT.md  UVX_INVESTIGATION_REPORT.md  UVX_STATUS.md
docs/features/: tmux-integration.md
lib/: base.py  config.py  registry.py
plugins/network/: socket_close.py  socket_message.py  socket_read.py  socket_telnet.py  socket_write.py
plugins/process/: proc_cmd.py  proc_ps.py  spawn.py  ssh_proc.py
plugins/serial/: serial_write.py
plugins/system/: activate.py  exec.py  file.py  sessions.py
plugins/terminal/: bash.py  clear.py  connect.py
pty_mcp_server/: __init__.py  __main__.py  server.py
pty_mcp_server/config/: projects.json
pty_mcp_server/core/: manager.py
pty_mcp_server/core/sessions/: process.py  pty.py  serial.py  socket.py  tmux.py
pty_mcp_server/lib/: __init__.py  base.py  config.py  env_manager.py  registry.py
pty_mcp_server/plugins/network/: __init__.py  socket_close.py  socket_message.py  socket_open.py  socket_read.py  socket_telnet.py  socket_write.py
pty_mcp_server/plugins/process/: __init__.py  kill_proc.py  proc_cmd.py  proc_ps.py  send_proc.py  spawn.py  ssh_proc.py
pty_mcp_server/plugins/serial/: __init__.py  serial_close.py  serial_message.py  serial_open.py  serial_read.py  serial_write.py
pty_mcp_server/plugins/system/: __init__.py  activate.py  env.py  exec.py  file.py  projects.py  sessions.py  status.py
pty_mcp_server/plugins/terminal/: __init__.py  bash.py  clear.py  connect.py  disconnect.py  resize.py  send.py  ssh.py  telnet.py
pty_mcp_server/plugins/tmux/: __init__.py  tmux_attach.py  tmux_capture.py  tmux_kill.py  tmux_list.py  tmux_send.py  tmux_start.py
tests/: README.md  __init__.py  conftest.py  quick_test.sh  test_package_complete.py  test_pty_uvx.py  test_pty_uvx_direct.py  test_uvx.sh
tests/functional/: __init__.py  test_tmux_functional.py
tests/integration/: __init__.py  test_architecture.py  test_tmux_integration.py
tests/unit/: __init__.py
